[Watch] Feat #1: 화면 제작
- 메인 화면 제작
- 레시피 연동 화면 제작
- 쇼핑 리스트 화면 제작
- 위험 식품 알림 화면 제작

--- a/watch/FIF_Watch/gradle/libs.versions.toml
+++ b/watch/FIF_Watch/gradle/libs.versions.toml
@@ -23,6 +23,7 @@ retrofit2KotlinxSerializationConverter = "1.0.0"
 converterScalars = "2.4.0"
 datastorePreferences = "1.0.0"
 glideCompose = "1.0.0-beta01"
+drawablePainter = "0.35.0-alpha"
 
 [libraries]
 play-services-wearable = { group = "com.google.android.gms", name = "play-services-wearable", version.ref = "playServicesWearable" }
@@ -54,6 +55,7 @@ retrofit2-kotlinx-serialization-converter = { group = "com.jakewharton.retrofit"
 converter-scalars = { group = "com.squareup.retrofit2", name = "converter-scalars", version.ref = "converterScalars" }
 datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastorePreferences" }
 glide-compose = { group = "com.github.bumptech.glide", name = "compose", version.ref = "glideCompose" }
+drawable-painter = { group = "com.google.accompanist", name = "accompanist-drawablepainter", version.ref = "drawablePainter" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
