--- a/watch/FIF_Watch/app/src/main/AndroidManifest.xml
+++ b/watch/FIF_Watch/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
             android:theme="@style/MainActivityTheme.Starting">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
+                <action android:name="android.intent.action.TTS_SERVICE" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
