--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -40,6 +40,13 @@ dependencies {
 
 	// Validation
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+	// FCM
+	implementation 'com.google.firebase:firebase-admin:9.2.0'
+	implementation 'com.google.auth:google-auth-library-oauth2-http:1.23.0'
+
+	// jackson databind
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.1'
 }
 
 tasks.named('test') {
