--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -48,6 +48,7 @@ dependencies {
 
 	// WebSocket
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
 }
 
