[BE] Feat #44: Swagger api-docs path 지정

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -19,3 +19,7 @@ REFRESH_TOKEN_NAME: refreshToken
 springdoc:
   swagger-ui:
     path: /api/swagger-ui
+    persist-authorization: true
+  api-docs:
+    path: /api/api-docs
+  
