--- a/ai/app/requirements.txt
+++ b/ai/app/requirements.txt
@@ -28,18 +28,15 @@ nest-asyncio==1.6.0
 numexpr==2.8.7
 numpy==1.26.4
 openai==1.14.1
-packaging==24.0
 pandas==2.2.1
 pandas-stubs==2.1.4.231227
 parso==0.8.3
 pip==23.3.1
 platformdirs==4.2.0
 prompt-toolkit==3.0.43
-psutil==5.9.8
 pure-eval==0.2.2
 pydantic==2.5.3
 pydantic_core==2.14.6
-Pygments==2.17.2
 python-dateutil==2.9.0.post0
 python-dotenv==0.21.0
 pytz==2023.3.post1
@@ -48,6 +45,7 @@ pyzmq==25.1.2
 setuptools==68.2.2
 six==1.16.0
 sniffio==1.3.0
+sse-starlette==2.0.0
 stack-data==0.6.3
 starlette==0.27.0
 tornado==6.4
