--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -14,6 +14,8 @@ ACCESS_TOKEN_EXPIRE_TIME_MILLI_SEC: 86400000 # 1일
 REFRESH_TOKEN_EXPIRE_TIME_MILLI_SEC: 86400000 # 1일
 REFRESH_TOKEN_NAME: refreshToken
 
+FASTAPI_SERVER_URL: https://j10s005.p.ssafy.io/api/ai
+
 
 # Swagger
 springdoc:
