[BE] Setting #50: 환경 변수 설정

--- a/backend/src/main/resources/application-deploy.yml
+++ b/backend/src/main/resources/application-deploy.yml
@@ -14,3 +14,5 @@ spring:
       hibernate.format_sql: true
       hibernate.use_sql_comments: false
       hibernate.default_batch_fetch_size: 100
+
+ai-server-base-url: https://j10s005.p.ssafy.io/api/ai
