--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -14,3 +14,5 @@ spring:
       hibernate.format_sql: true
       hibernate.use_sql_comments: false
       hibernate.default_batch_fetch_size: 100
+
+ai-server-base-url: http://localhost:8000/api/ai
