--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -62,6 +62,9 @@ dependencies {
 
 	// Webflux
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
+	// AWS
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 }
 
 tasks.named('test') {
