[Web] Fix: Firebase config 수정

--- a/frontend/.env
+++ b/frontend/.env
@@ -2,11 +2,20 @@
 VITE_BASE_URL="http://localhost:5173/api"
 VITE_EVENT_SOURCE="https://j10s005.p.ssafy.io/api/generate-AI"
 
-VITE_API_KEY="AIzaSyCQWwpf7B34eIAtUwtGR0VWy-LxZYofzsg"
-VITE_AUTH_DOMAIN="fridge-a3bc8.firebaseapp.com"
-VITE_PROJECT_ID="fridge-a3bc8"
-VITE_STORAGE_BUCKET="fridge-a3bc8.appspot.com"
-VITE_MESSAGING_SENDER_ID="668301712530"
-VITE_APP_ID="1:668301712530:web:15bb4341c608af976bda4b"
-VITE_MEASUREMENT_ID="G-416NJ95Y0R"
-VITE_VAPID_KEY="BBsJbzCH2M6KIujne-n_hQwIt8zoc6WIgEjRkgFpJ---F3F-5izwxbRQPyEHhJGuOpVPSksi0fXP7tdeuxO4PWA"
+# VITE_API_KEY="AIzaSyCQWwpf7B34eIAtUwtGR0VWy-LxZYofzsg"
+# VITE_AUTH_DOMAIN="fridge-a3bc8.firebaseapp.com"
+# VITE_PROJECT_ID="fridge-a3bc8"
+# VITE_STORAGE_BUCKET="fridge-a3bc8.appspot.com"
+# VITE_MESSAGING_SENDER_ID="668301712530"
+# VITE_APP_ID="1:668301712530:web:15bb4341c608af976bda4b"
+# VITE_MEASUREMENT_ID="G-416NJ95Y0R"
+# VITE_VAPID_KEY="BBsJbzCH2M6KIujne-n_hQwIt8zoc6WIgEjRkgFpJ---F3F-5izwxbRQPyEHhJGuOpVPSksi0fXP7tdeuxO4PWA"
+
+VITE_API_KEY="AIzaSyARH_Be77DcpDwfuX_Ul9oPdTXgW1BxRBk"
+VITE_AUTH_DOMAIN="fridgeisfree-6fca3.firebaseapp.com"
+VITE_PROJECT_ID="fridgeisfree-6fca3"
+VITE_STORAGE_BUCKET="fridgeisfree-6fca3.appspot.com"
+VITE_MESSAGING_SENDER_ID="623127222721"
+VITE_APP_ID="1:623127222721:web:8938aed0fc5586dd853740"
+VITE_MEASUREMENT_ID="G-JPLJ1LGCEB"
+VITE_VAPID_KEY="BIYqXOl3u7rwU0waJDcEv7O88u9cns9ba3foIyk_2bo01d_EHpbLJcE5JSdF2MJ6dtdaloFye4-G3-Clwwcluvw"
