[Web] Fix: Vite Proxy 코드 제거

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,5 @@
-# VITE_BASE_URL="https://j10s005.p.ssafy.io/api"
-VITE_BASE_URL="http://localhost:5173/api"
+VITE_BASE_URL="https://j10s005.p.ssafy.io/api"
+# VITE_BASE_URL="http://localhost:5173/api"
 VITE_EVENT_SOURCE="https://j10s005.p.ssafy.io/api/generate-AI"
 
 VITE_API_KEY="AIzaSyARH_Be77DcpDwfuX_Ul9oPdTXgW1BxRBk"
